[package]
name = "chiliseed-build-worker"
version = "0.1.0"
authors = ["Chiliseed <info@chiliseed.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
rusoto_core = "0.43.0"
rusoto_credential = "0.43.0"
rusoto_ecr = "0.43.0"
tokio = {version = "0.2", features = ["rt-core", "macros"]}
structopt = { version = "0.3", default-features = false }
